--- a/factory_demo_files/allstyle.css
+++ b/factory_demo_files/allstyle.css
@@ -212,7 +212,7 @@ nav.idea-search-top>div>a,nav.idea-search-top>div>a:hover{
 						height:47px;
 						width:47px;
 						background-size:30px 30px;
-						background-image:url(https://daikimaruyam.github.io/factory_demo/factory_demo.html/publichttps://daikimaruyam.github.io/factory_demo/public/source/main/images/hamburger.png);
+						background-image:url(https://daikimaruyam.github.io/factory_demo/public/source/main/images/hamburger.png);
 						box-sizing:border-box;
 						border-right:1px solid #ffffff;
 				}
@@ -275,7 +275,7 @@ nav.idea-search-top>div>a,nav.idea-search-top>div>a:hover{
 						height:47px;
 						width:47px;
 						background-size:30px 30px;
-						background-image:url(https://daikimaruyam.github.io/factory_demo/factory_demo.html/publichttps://daikimaruyam.github.io/factory_demo/public/source/main/images/hamburger.png);
+						background-image:url(https://daikimaruyam.github.io/factory_demo/public/source/main/images/hamburger.png);
 						box-sizing:border-box;
 						border-right:1px solid #ffffff;
 				}
