--- a/factory_demo_files/allstyle.css
+++ b/factory_demo_files/allstyle.css
@@ -224,7 +224,7 @@ nav.idea-search-top>div>a,nav.idea-search-top>div>a:hover{
 						height:47px;
 						width:47px;
 						background-size:auto 15px;
-						background-image:url(https://daikimaruyam.github.io/factory_demo/factory_demo.html/publichttps://daikimaruyam.github.io/factory_demo/public/source/main/images/back_arrow.png);
+						background-image:url(https://daikimaruyam.github.io/factory_demo/public/source/main/images/back_arrow.png);
 						box-sizing:border-box;
 				}
 				header.ideaTop > div > a.headerIdeaRegLink{
@@ -237,7 +237,7 @@ nav.idea-search-top>div>a,nav.idea-search-top>div>a:hover{
             box-sizing:border-box;
 						border-left:1px solid #ffffff;
 						background-size:22px 22px;
-						background-image:url(https://daikimaruyam.github.io/factory_demo/factory_demo.html/publichttps://daikimaruyam.github.io/factory_demo/public/source/main/images/edit_pen.png?1);
+						background-image:url(https://daikimaruyam.github.io/factory_demo/public/source/main/images/edit_pen.png?1);
 				}
 
 
@@ -287,7 +287,7 @@ nav.idea-search-top>div>a,nav.idea-search-top>div>a:hover{
 						height:47px;
 						width:47px;
 						background-size:auto 15px;
-						background-image:url(https://daikimaruyam.github.io/factory_demo/factory_demo.html/publichttps://daikimaruyam.github.io/factory_demo/public/source/main/images/back_arrow.png);
+						background-image:url(https://daikimaruyam.github.io/factory_demo/public/source/main/images/back_arrow.png);
 						box-sizing:border-box;
 				}
 				header.craftTop > div > a.headerCraftAccountLink{
@@ -300,7 +300,7 @@ nav.idea-search-top>div>a,nav.idea-search-top>div>a:hover{
             box-sizing:border-box;
 						border-left:1px solid #ffffff;
 						background-size:22px 22px;
-						background-image:url(https://daikimaruyam.github.io/factory_demo/factory_demo.html/publichttps://daikimaruyam.github.io/factory_demo/public/source/main/images/account_man.png?1);
+						background-image:url(https://daikimaruyam.github.io/factory_demo/public/source/main/images/account_man.png?1);
 				}
 
 
@@ -794,7 +794,7 @@ nav.idea-search-top>div>a,nav.idea-search-top>div>a:hover{
 				display:inline-block;
 				border-radius:4px;
 				text-decoration:none;
-				background-image:url(https://daikimaruyam.github.io/factory_demo/factory_demo.html/publichttps://daikimaruyam.github.io/factory_demo/public/source/main/images/comment-icon.png);
+				background-image:url(https://daikimaruyam.github.io/factory_demo/public/source/main/images/comment-icon.png);
 				background-repeat:no-repeat;
 				background-size:30px auto;
 				background-position: calc(50% - 120px) center;
@@ -1464,7 +1464,7 @@ footer li a:hover {
 		height:69px;
 		line-height:69px;
 		border-bottom:1px solid #ffffff;
-		background-image:url(https://daikimaruyam.github.io/factory_demo/factory_demo.html/publichttps://daikimaruyam.github.io/factory_demo/public/source/main/images/hamburger-arrow.png);
+		background-image:url(https://daikimaruyam.github.io/factory_demo/public/source/main/images/hamburger-arrow.png);
     background-position:calc(100% - 30px) center;
 		background-size:auto 15px;
 		background-repeat:no-repeat;
@@ -1670,7 +1670,7 @@ footer li a:hover {
 		font-weight:bold;
 }
 .ideaUpdRegBtn2 a{
-		background-image:url(https://daikimaruyam.github.io/factory_demo/factory_demo.html/publichttps://daikimaruyam.github.io/factory_demo/public/source/main/images/comment-icon.png);
+		background-image:url(https://daikimaruyam.github.io/factory_demo/public/source/main/images/comment-icon.png);
 		background-repeat:no-repeat;
 		background-size:30px auto;
 		background-position: calc(50% - 120px) center;
@@ -1841,7 +1841,7 @@ footer li a:hover {
 				color:#ffffff;
 				font-size:16px;
 				font-weight:bold;
-				background-image:url(https://daikimaruyam.github.io/factory_demo/factory_demo.html/publichttps://daikimaruyam.github.io/factory_demo/public/source/main/images/comment-icon.png);
+				background-image:url(https://daikimaruyam.github.io/factory_demo/public/source/main/images/comment-icon.png);
 				background-repeat:no-repeat;
 				background-size:30px auto;
 				background-position: calc(50% - 60px) center;
@@ -2271,7 +2271,7 @@ footer li a:hover {
 				color:#ffffff;
 				font-size:16px;
 				font-weight:bold;
-				background-image:url(https://daikimaruyam.github.io/factory_demo/factory_demo.html/publichttps://daikimaruyam.github.io/factory_demo/public/source/main/images/comment-icon.png);
+				background-image:url(https://daikimaruyam.github.io/factory_demo/public/source/main/images/comment-icon.png);
 				background-repeat:no-repeat;
 				background-size:30px auto;
 				background-position: calc(50% - 120px) center;
