--- a/factory_demo_files/allstyle.css
+++ b/factory_demo_files/allstyle.css
@@ -1469,6 +1469,46 @@ footer li a:hover {
 		background-size:auto 15px;
 		background-repeat:no-repeat;
 }
+
+#hamburgerPopC{
+	  position:fixed;
+		top:47px;
+		bottom:0px;
+		left:0px;
+		width:100%;
+		background-color:rgba(0,0,0,0.6);
+		z-index:20;
+		display:none;
+}
+#hamburgerPopCList{
+	  border-top:1px solid #ffffff;
+	  background-color:#F55D39;
+		max-width: 1024px;
+		margin-left:auto;
+		margin-right:auto;
+		transition: all 300ms 0s ease;
+		left:-1024px;
+		position:relative;
+		display:none;
+}
+#hamburgerPopCList a,#hamburgerPopCList a:hover{
+    text-decoration:none;
+		color:#ffffff;
+		padding-left:30px;
+		box-sizing:border-box;
+		font-size:20px;
+    display:block;
+		height:69px;
+		line-height:69px;
+		border-bottom:1px solid #ffffff;
+		background-image:url(https://daikimaruyam.github.io/factory_demo/public/source/main/images/hamburger-arrow.png);
+    background-position:calc(100% - 30px) center;
+		background-size:auto 15px;
+		background-repeat:no-repeat;
+}
+
+
+
 .idea-container-upload{
 		padding-top:47px;
 }
